# w1.baps.solutions

./: .gitignore  PLAN.md  README.md  install.sh  pyproject.toml  vercel.json  w1
docs/: PACKAGING.md  SPEC.md  SUPPLY_CHAIN.md  base44-ui-prompt.md
packaging/: app_main.py  build.sh  setup_app.py  w1.entitlements
scripts/: gen_widget_frames.py  sync_rules_from_ts.py
src/w1_core/: __init__.py  config.py  pipeline.py
src/w1_core/audio/: __init__.py  types.py
src/w1_core/backends/: __init__.py  base.py  factory.py  faster_whisper.py  mlx_whisper.py  mock.py
src/w1_core/correction/: __init__.py  bias_prompt.py  cleanup.py  engine.py  fuzzy.py  loader.py  protect.py  rules.py  transliterate.py
src/w1_data/: __init__.py  _meta.json  bias_seed.json  diacritics.json  glossary.json  protected_terms.json  terminology_rules.json
src/w1_macos/: __init__.py  app.py  cli.py  controller.py  focus.py  hotkey.py  inject.py  mic.py  paste_panel.py  paths.py  permissions.py  widget.py
tests/core/: test_bias_prompt.py  test_cleanup.py  test_correction.py  test_fuzzy.py  test_loader.py  test_pipeline.py  test_transliterate.py
ui/: index.html
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
